Add vehicle content
Also optimised vehicle content and add dev map

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,8 @@
 
+[ProjectSettings]
+ProjectName=Advanced Vehicle Template BP
+
+
+
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=C9299B56E44A301E8FA6358F2525947C
+ProjectID=8595928A364DB4979E2CCD86C7A8D661
