--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,33 @@
+[URL]
+GameName=VehicleReplaySystem
 
+[/Script/Engine.PhysicsSettings]
+bSubstepping=False
+bSubsteppingAsync=True
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+EditorStartupMap=/Game/Maps/Dev.Dev
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/Dev.Dev
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/Engine.GameMode
+GlobalDefaultServerGameMode=None
+
+[/Script/Engine.RendererSettings]
+r.ReflectionMethod=1
+r.GenerateMeshDistanceFields=True
+r.DynamicGlobalIlluminationMethod=1
+r.Mobile.EnableNoPrecomputedLightingCSMShader=1
+r.ClearCoatNormal=True
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+
+r.Shadow.Virtual.Enable=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -32,34 +58,21 @@ CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
+
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
-[/Script/Engine.RendererSettings]
-r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
-r.Shadow.Virtual.Enable=1
-r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-
-[/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
-CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
-
-[/Script/Engine.UserInterfaceSettings]
-bAuthorizeAutomaticWidgetVariableCreation=False
-
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/AdvanceReplaySystem")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/AdvanceReplaySystem")
-+ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="AdvanceReplaySystemGameModeBase")
++ActiveGameNameRedirects=(OldGameName="TP_VehicleAdvBP",NewGameName="/Script/VehicleReplaySystem")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_VehicleAdvBP",NewGameName="/Script/VehicleReplaySystem")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=A36BE045B147874199935E9F57777840
+SecurityToken=66C4BCA4174A835209EDA29D5B0C2971
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
